WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
122545
[sh4] Fix lots of unused parameter warnings.
https://bugs.webkit.org/show_bug.cgi?id=122545
Summary
[sh4] Fix lots of unused parameter warnings.
Julien Brianceau
Reported
2013-10-09 03:23:02 PDT
Fix lots of unused parameter warnings in sh4 baseline JIT part.
Attachments
Fix unused parameters warnings in sh4 part of baseline JIT.
(4.84 KB, patch)
2013-10-09 03:25 PDT
,
Julien Brianceau
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Julien Brianceau
Comment 1
2013-10-09 03:25:17 PDT
Created
attachment 213765
[details]
Fix unused parameters warnings in sh4 part of baseline JIT.
WebKit Commit Bot
Comment 2
2013-10-09 04:20:22 PDT
Comment on
attachment 213765
[details]
Fix unused parameters warnings in sh4 part of baseline JIT. Clearing flags on attachment: 213765 Committed
r157161
: <
http://trac.webkit.org/changeset/157161
>
WebKit Commit Bot
Comment 3
2013-10-09 04:20:23 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug