[sh4] Fix lots of unused parameter warnings. https://bugs.webkit.org/show_bug.cgi?id=122545

Patch by Julien Brianceau <jbriance@cisco.com> on 2013-10-09
Reviewed by Csaba Osztrogonác.

* assembler/MacroAssemblerSH4.h:
(JSC::MacroAssemblerSH4::revertJumpReplacementToPatchableBranchPtrWithPatch):
* assembler/SH4Assembler.h:
(JSC::SH4Assembler::andlImm8r):
(JSC::SH4Assembler::orlImm8r):
(JSC::SH4Assembler::xorlImm8r):
(JSC::SH4Assembler::cmpEqImmR0):
(JSC::SH4Assembler::testlImm8r):
(JSC::SH4Assembler::movwPCReg):
(JSC::SH4Assembler::movwMemReg):
(JSC::SH4Assembler::movbMemReg):
(JSC::SH4Assembler::printInstr):
(JSC::SH4Assembler::printBlockInstr):

Canonical link: https://commits.webkit.org/140630@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157161 268f45cc-cd09-0410-ab3c-d52691b4dbfc